# tflite-cpp-starter

./: CMakeLists.txt  README.md
